--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Intro to HTML</title>
 </head>
 <body>
+    <!-- This is a comment -->
+    <h1>This is my First Website</h1>
+    <p>This is my first class with HTML.<br>This is also very useless</p>
     
 </body>
 </html>
